# nlopt-util

./: CMakeLists.txt  README.md  nlopt-util.hpp
include/: nlopt-util.h  nlopt-util.hpp
